--- a/style.css
+++ b/style.css
@@ -18,11 +18,39 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 }
+.key-container button {
+	width: 43px;
+	height: 58px;
+	border-radius: 4px;
+	border: none;
+	background-color: #818384;
+	color: #ffffff;
+	margin: 4px;
+}
+.key-container button:nth-child(11) {
+	margin-left: 30px;
+}
+.key-container button:nth-child(20),
+.key-container button:nth-child(28) {
+	width: 68px;
+}
 .tile-container {
 	width: 330px;
 	margin-bottom: 30px;
 }
-.message-container {
+.tile-container .tile {
+	width: 62px;
+	height: 62px;
+	border: 2px solid#3a3a3c;
+	box-sizing: border-box;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 2px;
+}
+
+.tile-container div {
+	display: flex;
 
 }
 
@@ -32,4 +60,13 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
+}
+.message-container {
+	height: 30px;
+}
+.message-container p {
+	background-color: #818384;
+	border-radius: 10px;
+	padding: 10px;
+	margin: 0;
 }
